objects/CSS_JobForms__c.object
<CustomObject>
    <fields>
        <fullName>Animals_or_Insects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Animals or Insects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Battery_Safety__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Battery Safety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Caught_or_Trapped_By__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Caught or Trapped By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chassiss_Dyno__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chassiss Dyno</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chemical_Bath__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chemical Bath</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cleaning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleaning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cleanliness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleanliness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Worker_Name__c</fullName>
        <label>Co-Worker Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compressed_Air__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compressed Air</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confined_Space_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confined Space Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confined_Work_Spaces__c</fullName>
        <defaultValue>false</defaultValue>
        <description>These field is to store the Power Gen JSA confined work space checkbox</description>
        <label>Confined Work Spaces</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Stress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Stress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_Stored_or_Secondary_Energy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Control Stored or Secondary Energy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Employees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer/Employees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dispose_Scrap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dispose/Scrap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dust_or_Dirt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dust or Dirt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elevated_Area_Mezzanine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elevated Area/Mezzanine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engine_Test_Cell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engine Test Cell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excessive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excessive Force</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exhaust_Gases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exhaust Gases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extreme_Cold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extreme Cold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extreme_Heat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extreme Heat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FIRE_EXPLOSION_OR_ARC_FLASH_Controls__c</fullName>
        <label>FIRE,EXPLOSION OR ARC FLASH_Controls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FIRE_EXPLOSION_OR_ARC_FLASH_What_IS_Stra__c</fullName>
        <label>FIRE,EXPLOSION OR ARC FLASH_What IS Stra</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FIRE_EXPLOSION_OR_ARC_FLASH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FIRE,EXPLOSION OR ARC FLASH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldPowerGen_Task2__c</fullName>
        <label>FieldPowerGen_Task2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Load Bank</fullName>
                </value>
                <value>
                    <fullName>Paint</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Start Up</fullName>
                </value>
                <value>
                    <fullName>Upfit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldPowerGen__c</fullName>
        <label>FieldPowerGen_Task1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;200 KW</fullName>
                </value>
                <value>
                    <fullName>&gt;200 KW</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Switchgear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldServiceEngine_Task1__c</fullName>
        <label>FieldServiceEngine_Task1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agricultural</fullName>
                </value>
                <value>
                    <fullName>Auto-Truck OTR</fullName>
                </value>
                <value>
                    <fullName>Bus</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Oil-Gas</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldServiceEngine_Task2__c</fullName>
        <label>FieldServiceEngine_Task2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flammable_Gas_Liquid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flammable Gas/Liquid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floor_Pit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Floor Pit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Initiate_Time__c</fullName>
        <label>Form Initiate Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Form_Start_Time__c</fullName>
        <description>To capture the time form was first opened.</description>
        <label>Form Start Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fumes_or_Smoke__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fumes or Smoke</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hazardous_Energy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazardous Energy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heavy_Lifting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heavy Lifting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Altitude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Altitude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Noise_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Noise Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Winds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Winds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hot_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hygiene_Hazards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hygiene Hazards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDENTIFY_ANY_SPECIAL_CONTROL_MEASURES_RE__c</fullName>
        <label>IDENTIFY ANY SPECIAL CONTROL MEASURES RE</label>
        <length>4300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inform_Affected_Employees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inform Affected Employees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection_Pits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inspection Pits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Isolate_the_Machine_from_All_Energy_Sour__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Isolate the Machine from All Energy Sour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSA_Clone__c</fullName>
        <label>JSA_Clone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSA_CreatorName__c</fullName>
        <label>JSA_CreatorName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSA_File_Name__c</fullName>
        <description>Used to store First Name, Last Name and Created date of JSA Form</description>
        <label>JSA File Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSA_NearMiss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JSA_NearMiss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSA_Observation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JSA_Observation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSA_TimeZone__c</fullName>
        <description>This field is used to store the Time Zone when JSA Record is Inserted</description>
        <label>JSA_TimeZone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSA_Unit_Number__c</fullName>
        <label>JSA Unit Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSA__c</fullName>
        <label>JSA_Comments</label>
        <length>2100</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Location__c</fullName>
        <label>Job Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kneeling_Crawling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kneeling/Crawling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LIFTING_OPERATOIONS_Controls__c</fullName>
        <label>LIFTING OPERATOIONS_Controls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LIFTING_OPERATOIONS_What_Is_Strange__c</fullName>
        <label>LIFTING OPERATOIONS_What Is Strange</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LIFTING_OPERATOIONS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LIFTING OPERATIONS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lack_of_Walkway__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marine JSA</description>
        <label>Lack of Walkway</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ladder_or_Step_Ladder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ladder or Step Ladder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leaks_or_Spills__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leaks or Spills</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiftingAccess1__c</fullName>
        <description>First row values to store in in SHOPJSA</description>
        <label>LIFTING &amp; ACCESS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiftingAccess2__c</fullName>
        <description>Second row values to store in in SHOPJSA</description>
        <label>LiftingAccess2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiftingAccess3__c</fullName>
        <description>Third row values to store in in SHOPJSA</description>
        <label>LiftingAccess3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lockout_the_Energy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lockout the Energy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoneWorkingTextArea__c</fullName>
        <description>These field is to store the value of text area of Lone Working text area field from InShop JSA form</description>
        <label>LoneWorkingTextArea</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LoneWorking__c</fullName>
        <description>To store value of lone working in inSHopJSA</description>
        <label>LONE WORKING</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MOVING_MACHINERY_Controls__c</fullName>
        <label>MOVING MACHINERY_Controls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MOVING_MACHINERY_What_Is_Strange__c</fullName>
        <label>MOVING MACHINERY_What Is Strange</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MOVING_MACHINERY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOVING MACHINERY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOVING_VEHICLES_Controls__c</fullName>
        <label>MOVING VEHICLES_Controls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MOVING_VEHICLES_What_Is_Strange__c</fullName>
        <label>MOVING VEHICLES_What Is Strange</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MOVING_VEHICLES__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOVING VEHICLES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintain_the_Lackout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintain the Lockout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Make_sure_the_area_is_Clear_of_personal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make sure the area is Clear of personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Contact_Tel_No__c</fullName>
        <label>Manager Contact Tel No</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <label>Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarineAdverseWeatherControls__c</fullName>
        <label>MarineAdverseWeatherControls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MarineAdverseWeatherSIH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MarineAdverseWeatherSIH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarineAdverseWeatherStrange__c</fullName>
        <label>MarineAdverseWeatherStrange</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MarineAscendingControls__c</fullName>
        <label>MarineAscendingControls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MarineAscendingSIH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MarineAscendingSIH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarineAscendingStrange__c</fullName>
        <label>MarineAscendingStrange</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MarineLiftingAccess1__c</fullName>
        <description>These field is to store the Marine LA 3rd row</description>
        <label>MarineLiftingAccess1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarineLiftingAccess2__c</fullName>
        <description>These field is to store the Marine LA 4th row</description>
        <label>MarineLiftingAccess2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarineLiftingAccess3__c</fullName>
        <description>These field is to store the Marine LA 5th row</description>
        <label>MarineLiftingAccess3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarinePrepare1__c</fullName>
        <description>These fiels is to store MArine JSA Prepare first row</description>
        <label>MarinePrepare1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarinePrepare2__c</fullName>
        <description>These field is to store MArine JSA Prepare third row</description>
        <label>MarinePrepare2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarinePrepare3__c</fullName>
        <description>These field is to store MArine JSA Prepare fourth row</description>
        <label>MarinePrepare3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarineRestrictedWorkAreaControls__c</fullName>
        <label>MarineRestrictedWorkAreaControls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MarineRestrictedWorkAreaSIH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MarineRestrictedWorkAreaSIH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarineRestrictedWorkAreaStrange__c</fullName>
        <label>MarineRestrictedWorkAreaStrange</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MarineTE1__c</fullName>
        <description>These field is to store the Marine TE 2nd row</description>
        <label>MarineTE1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarineTE2__c</fullName>
        <description>These field is to store the Marine TE 4th row</description>
        <label>MarineTE2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarineVentilationControls__c</fullName>
        <label>MarineVentilationControls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MarineVentilationSIH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MarineVentilationSIH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarineVentilationStrange__c</fullName>
        <label>MarineVentilationStrange</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Work_Platform__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Work Platform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Natural_Gas_CNG_LNG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Natural Gas(CNG/LNG)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notifiy_the_affected_Employees_that_the__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notifiy the affected Employees that the</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_the_affected_Employees_that_the_M__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify the affected Employees that the M</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OTHER1_Controls__c</fullName>
        <label>OTHER1_Controls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OTHER1_What_Is_Strange__c</fullName>
        <label>OTHER1_What Is Strange</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OTHER1__c</fullName>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OTHER2_Controls__c</fullName>
        <label>OTHER2_Controls</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OTHER2_What_Is_Strange__c</fullName>
        <label>OTHER2_What Is Strange</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OTHER2__c</fullName>
        <label>OTHER2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Obstructed_Work_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marine JSA</description>
        <label>Obstructed Work Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overhead_Power_Lines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>These field is common for Field Service, Marine and Power Gen JSA&apos;s form to store the value</description>
        <label>Overhead Power Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPE1__c</fullName>
        <description>To store first row value of in Shop JSA</description>
        <label>PPE1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPE2__c</fullName>
        <description>Second row value to shore in shop JSA</description>
        <label>PPE2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PREPARE1__c</fullName>
        <description>These field is store PREPARE first row value</description>
        <label>PREPARE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PREPARE2__c</fullName>
        <description>These field is to store the prepare second row value for in shop JSA</description>
        <label>PREPARE2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PREPARE3__c</fullName>
        <description>These field is to store the prepare third row value for in shop JSA</description>
        <label>PREPARE3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paint_Burn_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marine JSA</description>
        <label>Paint Burn- Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parts_Warehouse_Task1__c</fullName>
        <label>Parts_Warehouse_Task1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk Parts</fullName>
                </value>
                <value>
                    <fullName>Cores</fullName>
                </value>
                <value>
                    <fullName>Cut House</fullName>
                </value>
                <value>
                    <fullName>Fork Lift</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pull Parts</fullName>
                </value>
                <value>
                    <fullName>Shipping/Receiving</fullName>
                </value>
                <value>
                    <fullName>Stock Parts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parts_Warehouse_Task2__c</fullName>
        <label>Parts_Warehouse_Task2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk Parts</fullName>
                </value>
                <value>
                    <fullName>Cores</fullName>
                </value>
                <value>
                    <fullName>Cut House</fullName>
                </value>
                <value>
                    <fullName>Fork Lift</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pull Parts</fullName>
                </value>
                <value>
                    <fullName>Shipping/Receiving</fullName>
                </value>
                <value>
                    <fullName>Stock Parts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerGenFlashHazardBoundary__c</fullName>
        <description>These field is to store POWERGEN JSA flash hazard boundary value</description>
        <label>PowerGenFlashHazardBoundary</label>
        <type>TextArea</type>
    </fields>
</CustomObject>